--- a/index.html
+++ b/index.html
@@ -52,16 +52,24 @@
                     <li data-target="#slideshow" data-slide-to="0" class="active"></li>
                     <li data-target="#slideshow" data-slide-to="1"></li>
                     <li data-target="#slideshow" data-slide-to="2"></li>
+                    <li data-target="#slideshow" data-slide-to="3"></li>
+                    <li data-target="#slideshow" data-slide-to="4"></li>
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img class="d-block w-100" src="assets/images/stew2.jpg" alt="Chicken Stew">
+                        <img class="img-carousel w-100" src="assets/images/restaurant.jpg" alt="Restaurant">
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100" src="assets/images/chicken-barbeque.jpg" alt="Barbeque Chicken">
+                        <img class="img-carousel w-100" src="assets/images/coldPorkSalad-607px.jpg" alt="Cold Pork Salad">
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100" src="assets/images/shrimp-mayo.jpg" alt="Shrimp with Mayonneise">
+                        <img class="img-carousel w-100" src="assets/images/stew2.jpg" alt="Chicken Stew">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="img-carousel w-100" src="assets/images/chicken-barbeque.jpg" alt="Barbeque Chicken">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="img-carousel w-100" src="assets/images/shrimp-mayo.jpg" alt="Shrimp with Mayonneise">
                     </div>
                 </div>
                 <a class="carousel-control-prev" href="#slideshow" role="button" data-slide="prev">
