--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
@@ -21,6 +22,10 @@
 <body>
     <div class="container">
         <div class="col-lg-12">
+            <div id="header">
+                    <h1> <span class="gungsuh">산장</span> : Heaven Scent</h1> 
+                    <h3>"그분께서는 목마른 이에게 물을 먹이시고 배고픈 이를 좋은 것으로 채우셨다." -  시편 107:9</h3>
+                </div>
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <a class="navbar-brand" href="#">산장 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
@@ -40,9 +45,6 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#">Contact Us</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled" href="#">Disabled</a>
-                        </li>
                     </ul>
                 </div>
             </nav>
@@ -60,7 +62,7 @@
                         <img class="img-carousel w-100" src="assets/images/restaurant.jpg" alt="Restaurant">
                     </div>
                     <div class="carousel-item">
-                        <img class="img-carousel w-100" src="assets/images/coldPorkSalad-607px.jpg" alt="Cold Pork Salad">
+                        <img class="img-carousel w-100" src="assets/images/squid.jpg" alt="Cold Pork Salad">
                     </div>
                     <div class="carousel-item">
                         <img class="img-carousel w-100" src="assets/images/stew2.jpg" alt="Chicken Stew">
