--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     <div class="container">
         <div class="col-lg-12">
             <div id="header">
-                    <h1> <span class="gungsuh">산장</span> : Heaven Scent</h1> 
-                    <h3>"그분께서는 목마른 이에게 물을 먹이시고 배고픈 이를 좋은 것으로 채우셨다." -  시편 107:9</h3>
+                    <h1> <span class="gungsuh">산장</span> : Heaven Scent Restaurant</h1> 
+                    <h3><span class="gungsuh">"그분께서는 목마른 이에게 물을 먹이시고 배고픈 이를 좋은 것으로 채우셨다." -  시편</span> 107:9</h3>
                 </div>
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <nav class="navbar navbar-expand-lg">
                 <a class="navbar-brand" href="#">산장 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                     aria-label="Toggle navigation">
