--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
                     <h3><span class="gungsuh">"그분께서는 목마른 이에게 물을 먹이시고 배고픈 이를 좋은 것으로 채우셨다." -  시편</span> 107:9</h3>
                 </div>
             <nav class="navbar navbar-expand-lg">
-                <a class="navbar-brand" href="#">산장 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -35,15 +34,17 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">Home
+                            <a class="nav-link" href="index.html">Home
                                 <span class="sr-only">(current)</span>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Menu </a>
+                            <a class="nav-link" href="menu.html">Menu </a>
                         </li>
+                    </ul>
+                    <ul class="nav navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contact Us</a>
+                            <a class="nav-link" href="contact.html">Contact Us</a>
                         </li>
                     </ul>
                 </div>
