--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
         </div>
 
         <div class="container-content">
-            <div class="row">
-                <p> Featured Items </p>
+            <div class="footer">
+                <h3> 2524 West Lincoln Ave. Anaheim, CA 92081 </h3>
             </div>
         </div>
 
