--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <div id="header">
                     <h1> <span class="gungsuh">산장</span> : Heaven Scent Restaurant</h1> 
                     <h3><span class="gungsuh">"그분께서는 목마른 이에게 물을 먹이시고 배고픈 이를 좋은 것으로 채우셨다." -  시편</span> 107:9</h3>
+                    <h3 class="headline-en">"For he satisfies the thirsty and fills the hungry with good things." - Psalms 107:9</h3>
                 </div>
             <nav class="navbar navbar-expand-lg">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
@@ -33,11 +34,6 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="index.html">Home
-                                <span class="sr-only">(current)</span>
-                            </a>
-                        </li>
                         <li class="nav-item">
                             <a class="nav-link" href="menu.html">Menu </a>
                         </li>
@@ -87,8 +83,8 @@
         </div>
 
         <div class="container-content">
-            <div class="footer">
-                <h3> 2524 West Lincoln Ave. Anaheim, CA 92081 </h3>
+            <div class="container-address">
+                <h3 class="address"> 2524 West Lincoln Ave. Anaheim, CA 92081 </h3>
             </div>
         </div>
 
