--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
 
         <div class="container-content">
             <div class="container-address">
-                <h3 class="address"> 2524 West Lincoln Ave. Anaheim, CA 92081 </h3>
+                <h2 class="address"> 2524 West Lincoln Ave. Anaheim, CA 92081 </h2>
+                <h2 class="schedule">Tuesday - Saturday 5PM ~ 2AM / Sunday 3PM ~ 10PM </h2>
             </div>
         </div>
 
