--- a/menu.html
+++ b/menu.html
@@ -26,34 +26,46 @@
                 <h1>MENU</h1>
             </div>
         </div>
-
-        <div class="container-menu">
-            <div class="col-lg-10 offset-lg-1">
-                <!-- Nav tabs -->
-                <div class="card">
-                    <ul class="nav nav-tabs" role="tablist">
-                        <li role="presentation" class="active">
-                            <a href="#home" aria-controls="home" role="tab" data-toggle="tab">Home</a>
-                        </li>
-                        <li role="presentation">
-                            <a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Profile</a>
-                        </li>
-                        <li role="presentation">
-                            <a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Messages</a>
-                        </li>
-                        <li role="presentation">
-                            <a href="#settings" aria-controls="settings" role="tab" data-toggle="tab">Settings</a>
-                        </li>
-                    </ul>
-
-                    <!-- Tab panes -->
-                    <div class="tab-content">
-					Coming Soon!
-                    </div>
+        <div class="col-lg-10 offset-lg-1"> 
+                <div class="container-menu">
+                        <div id="slideshow" class="carousel slide" data-ride="carousel">
+                                <ol class="carousel-indicators">
+                                    <li data-target="#slideshow" data-slide-to="0" class="active"></li>
+                                    <li data-target="#slideshow" data-slide-to="1"></li>
+                                    <li data-target="#slideshow" data-slide-to="2"></li>
+                                    <li data-target="#slideshow" data-slide-to="3"></li>
+                                    <li data-target="#slideshow" data-slide-to="4"></li>
+                                </ol>
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                        <img class="img-menu" src="assets/images/menu/01.png" alt="menu-01">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img class="img-menu" src="assets/images/menu/02.png" alt="menu-02">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img class="img-menu" src="assets/images/menu/03.png" alt="menu-03">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img class="img-menu" src="assets/images/menu/04.png" alt="menu-04">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img class="img-menu" src="assets/images/menu/05.png" alt="menu-05">
+                                    </div>
+                                </div>
+                                <a class="carousel-control-prev" href="#slideshow" role="button" data-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Previous</span>
+                                </a>
+                                <a class="carousel-control-next" href="#slideshow" role="button" data-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Next</span>
+                                </a>
+                            </div>
                 </div>
-
-            </div>
         </div>
+
+
     </div>
 </body>
 
