--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="col-lg-12">
             <div id="header">
                     <h1> <span class="gungsuh">산장</span> : Heaven Scent Restaurant</h1> 
-                    <h3><span class="gungsuh">"그분께서는 목마른 이에게 물을 먹이시고 배고픈 이를 좋은 것으로 채우셨다." -  시편</span> 107:9</h3>
+                    <h3><span class="gungsuh">"그분께서는 타는 목을 시원하게 축여주시고 주린 배를 좋은 음식으로 채워주셨다." -  시편</span> 107:9</h3>
                     <h3 class="headline-en">"For he satisfies the thirsty and fills the hungry with good things." - Psalms 107:9</h3>
                 </div>
             <nav class="navbar navbar-expand-lg">
@@ -68,7 +68,7 @@
                         <img class="img-carousel w-100" src="assets/images/chicken-barbeque.jpg" alt="Barbeque Chicken">
                     </div>
                     <div class="carousel-item">
-                        <img class="img-carousel w-100" src="assets/images/shrimp-mayo.jpg" alt="Shrimp with Mayonneise">
+                        <img class="img-carousel w-100" src="assets/images/chicken-galbi.jpeg" alt="Chicken Galbi">
                     </div>
                 </div>
                 <a class="carousel-control-prev" href="#slideshow" role="button" data-slide="prev">
@@ -84,8 +84,9 @@
 
         <div class="container-content">
             <div class="container-address">
+                <h3 class="headline-en">Tel. (714)826-9292 </h3>
                 <h2 class="address"> 2524 West Lincoln Ave. Anaheim, CA 92081 </h2>
-                <h2 class="schedule">Tuesday - Saturday 5PM ~ 2AM / Sunday 3PM ~ 10PM </h2>
+                <h2 class="schedule">Tuesday - Saturday 5PM ~ 2AM / Sunday 3PM ~ 10PM / Monday Closed </h2>
             </div>
         </div>
 
