--- a/menu.html
+++ b/menu.html
@@ -25,6 +25,24 @@
             <div id="header">
                 <h1>MENU</h1>
             </div>
+            <nav class="navbar navbar-expand-lg">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link" href="index.html">Home </a>
+                            </li>
+                        </ul>
+                        <ul class="nav navbar-nav ml-auto">
+                            <li class="nav-item">
+                                <a class="nav-link" href="contact.html">Contact Us </a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
         </div>
         <div class="col-lg-10 offset-lg-1"> 
                 <div class="container-menu">
