--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <div class="container-address">
                 <h3 class="headline-en">Tel. (714)826-9292 </h3>
                 <h2 class="address"> 2524 West Lincoln Ave. Anaheim, CA 92081 </h2>
-                <h2 class="schedule">Tuesday - Saturday 5PM ~ 2AM / Sunday 5PM ~ 12AM / Monday Closed </h2>
+                <h2 class="schedule">Tuesday - Sunday 5PM ~ 2AM / Monday Closed </h2>
             </div>
         </div>
 
