--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
                         width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
                         <div id="container-text"> 
                                 <h2> Please call us at (714)826-9292 for more inquiries.  </h2>
-                                <h2> Tuesday - Saturday 5PM ~ 2AM / Sunday 3PM ~ 10PM / Monday Closed  </h2>
+                                <h2> Tuesday - Sunday 5PM ~ 2AM / Monday Closed  </h2>
                         </div>
                 </div>
         </div>
