--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="col-lg-12">
             <div id="header">
                     <h1> <span class="gungsuh">산장</span> : Heaven Scent Restaurant</h1> 
-                    <h2> HAPPY HOUR: 5PM~8PM </h2> 
+                    <h2> HAPPY HOUR: 5PM~8PM 20% discount! </h2> 
                 </div>
             <nav class="navbar navbar-expand-lg">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
